remove immediatly function refactor constants to enum and runner scripts to enum
